ronin setup unit file as user with working directory set

--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
@@ -4,6 +4,8 @@ After=oem-boot.service
 
 [Service]
 Type=simple
+User=admin
+WorkingDirectory=/home/admin
 ExecStart=/opt/setup/ronin-setup.sh
 StandardOutput=journal
 
