Update unit files

--- a/overlays/RoninOS/usr/lib/systemd/system/oem-boot.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/oem-boot.service
@@ -1,11 +1,13 @@
 [Unit]
 Description=Ronin OEM Fast
+After=network-online.target
+Wants=network-online.target
 
 [Service]
+Type=simple
 ExecStart=/usr/local/sbin/ronin-oem-fast.sh
 ExecStartPost=/usr/local/sbin/ronin-oem-teardown.sh
 StandardOutput=journal
-Type=simple
 
 [Install]
 WantedBy=multi-user.target
