--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
@@ -8,6 +8,7 @@ Type=simple
 User=admin
 WorkingDirectory=/home/admin
 ExecStart=/usr/local/sbin/ronin-setup.sh
+ExecStop=/usr/bin/pm2 resurrect
 StandardOutput=journal
 
 [Install]
