--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-post.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-post.service
@@ -4,7 +4,7 @@ After=oem-boot.service network-online.target
 
 [Service]
 Type=simple
-User=root
+User=ronindojo
 ExecStart=/usr/local/sbin/ronin-post.sh
 StandardOutput=journal
 
