--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
@@ -10,6 +10,7 @@ WorkingDirectory=/home/admin
 ExecStart=/usr/local/sbin/ronin-setup.sh
 ExecStop=/usr/bin/pm2 resurrect
 StandardOutput=journal
+RemainAfterExit=true
 
 [Install]
 WantedBy=multi-user.target
