--- a/overlays/RoninOS/etc/systemd/system/getty@tty1.service.d/override.conf
+++ b/overlays/RoninOS/etc/systemd/system/getty@tty1.service.d/override.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=-/usr/bin/agetty --autologin root --noclear %I $TERM
+ExecStart=-/sbin/agetty --autologin root --noclear %I $TERM
