attempt to prevent this from running during the build process.

--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Setup RoninDojo
-After=network-online.target
+After=armbian-firstrun.service
 Wants=network-online.target
 
 [Service]
