--- a/overlays/RoninOS/usr/lib/systemd/system/oem-boot.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/oem-boot.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Ronin OEM Fast
-After=network-online.target
+After=armbian-firstrun.service
 Wants=network-online.target
 
 [Service]
