--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Setup RoninDojo
-After=armbian-firstrun.service
+After=network-online.target
 Wants=network-online.target
 
 [Service]
