reworked to include Ronin-UI installed during build

--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-post.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-post.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Post RoninDojo Setup
-After=ronin-setup.service network-online.target
+After=ronin-setup.service
+Requires=ronin-setup.service
 
 [Service]
 Type=simple
