Attempt at having the installation not start until network is up.

--- a/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
+++ b/overlays/RoninOS/usr/lib/systemd/system/ronin-setup.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Setup RoninDojo
-After=avahi-daemon.service  network-online.target
-Wants=oem-boot.service
+After=avahi-daemon.service network-online.target
+Wants=oem-boot.service network-online.target
 
 [Service]
 Type=simple
